--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Animals#index</h1>
-<p>Find me in app/views/animals/index.html.erb</p>
+
+<div class="p-2 inline-block grid grid-cols-11 grid-span-4">
+  <div class="col-span-5 text-right font-bold text-white"> Animais adotados: <%= link_to 'Sim', animals_path(filter_adopted: true), :class => 'bg-red-500 rounded py-1 px-4' %> </div>
+  <div class="col-span-1 text-center font-bold"> <%= link_to 'Não', animals_path(filter_adopted: false), :class => 'text-white bg-green-500 rounded py-1 px-4' %> </div>
+  <div class="col-span-5 text-left font-bold"> <%= link_to 'Todos', animals_path, :class => 'text-white bg-blue-600 rounded py-1 px-4' %> </div>
+</div>
+
+<div class="divide-y text-blue-300">
+  <% @animals.each do |animal| %>
+    <div class="block p-2">
+      <div class="text-center text-xl mt-1"> Nome : <%= animal.name %> </div>
+      <div class="text-center text-xl mt-1"> Adotado : <%= animal.adopted %> </div>
+      <div class="text-center text-xl mt-1"> Descrição curta : <%= animal.short_description %> </div>
+      <div class="text-center hover:underline mt-1 font-bold"> <%= link_to 'Visualizar mais Informações.', animal_path(animal) %> </div>
+    </div>
+  <% end %>
+
+</div>
+<hr>
+<div class="font-bold text-center mt-6"> <%= link_to 'Cadastrar um novo animal', new_animal_path, :class => 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %> </div>
