--- a/app/views/animals/new.html.erb
+++ b/app/views/animals/new.html.erb
@@ -1,2 +1,22 @@
-<h1>Animals#new</h1>
-<p>Find me in app/views/animals/new.html.erb</p>
+<div class="p-2 text-center text-black">
+  <h4 class="font-bold mb-6 text-xl">Cadastrar um novo Animal</h3>
+  <div class="">
+    <%= form_with model: @animal do |form| %>
+      <div class="font-bold"> Nome do animal </div>
+      <div class="block"> <%= form.text_field :name, placeholder: "Nome do animal", size: '67', class: 'text-center' %> </div>
+      <div class="mt-1 font-bold"> Dia de nascimento</div>
+      <div class="block"> <%= form.text_field :date_of_birth , placeholder: "16/10/1999", size: '67', class: 'text-center' %> </div>
+      <div class="mt-1 font-bold"> Tipo do animal </div>
+      <div class="block"> <%= form.text_field :animal_type, placeholder: "Gato/Cachorro/Outro", size: '67', class: 'text-center' %> </div>
+      <div class="mt-1 font-bold"> Adotado </div>
+      <div class="block"> <%= form.text_field :adopted , placeholder: "Sim/Não", size: '67', class: 'text-center disabled' %> </div>
+      <div class="mt-1 font-bold"> Pequena descrição do animal </div>
+      <div class="block mt-1"> <%= form.text_area :short_description , placeholder: "Descrição curta referente ao animal", rows: '3', cols: '69', class: 'text-center' %> </div>
+      <div class="mt-1 font-bold"> Descrição completa do animal </div>
+      <div class="block mt-1"> <%= form.text_area :full_description , placeholder: "Descrição completa referente ao animal", rows: '6', cols: '69', class: 'text-center' %> </div>
+      <div class="mt-1 font-bold"> URL da imagem do animal </div>
+      <div class="block mt-1 mb-6"> <%= form.text_field :image_url , placeholder: "URL da Imagem do animal", size: '200' %> </div>
+      <div class="block mt-1"> <%= form.submit "Criar Animal", :class => 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
+    <% end %>
+  </div>
+</div>
