--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -10,7 +10,7 @@
   <% @animals.each do |animal| %>
     <div class="block p-2">
       <div class="text-center text-xl mt-1"> Nome : <%= animal.name %> </div>
-      <div class="text-center text-xl mt-1"> Adotado : <%= animal.adopted %> </div>
+      <div class="text-center text-xl mt-1"> Adotado : <%= booleanSimNao(animal.adopted) %> </div>
       <div class="text-center text-xl mt-1"> Descrição curta : <%= animal.short_description %> </div>
       <div class="text-center hover:underline mt-1 font-bold"> <%= link_to 'Visualizar mais Informações.', animal_path(animal) %> </div>
     </div>
