--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Animals#show</h1>
-<p>Find me in app/views/animals/show.html.erb</p>
+<div class="block p-2 text-blue-300">
+
+  <div class="text-center  text-xl mt-1"> <%= @animal.name %> </div>
+  <div class="mt-1 flex md:justify-center"> <%= image_tag @animal.image_url, size: "400x400" %> </div>
+  <div class="text-center text-xl mt-1"> Adotado: <%= @animal.animal_type %> </div>
+  <div class="text-center text-xl mt-1"> Data de Nascimento: <%= @animal.date_of_birth %> </div>
+  <div class="text-center text-xl mt-1"> Adotado: <%= booleanSimNao(@animal.adopted) %> </div>
+  <div class="text-center text-xl mt-1"> Descrição curta: <%= @animal.short_description %> </div>
+  <div class="text-center text-xl mt-1"> Descrição completa: <%= @animal.full_description %> </div>
+  <div class="text-center text-xl mt-1"> Dono: <%= @adoption.owner_name %> </div>
+
+</div>
+
+<div class="block mt-2 text-blue-300">
+  <div class="text-center hover:underline text-xl font-bold"> <%= link_to 'Adotar', edit_adoption_path(@adoption.id), method: 'get' %> </div>
+</div>
+
+<div class="inline-block grid grid-cols-11 mt-2 text-blue-300 font-bold">
+  <div class="col-span-5 text-right hover:underline text-xl"> <%= link_to 'Voltar', animals_path %> </div>
+  <div class="col-span-1 text-center hover:underline text-xl"> <%= link_to 'Editar', edit_animal_path(@animal), method: 'get' %> </div>
+  <div class="col-span-5 text-left hover:underline text-xl"> <%= link_to 'Deletar', animal_path(@animal), method: 'delete', data: { confirm: 'Tem certeza?'} %> </div>
+</div>
