--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -2,12 +2,12 @@
 
   <div class="text-center  text-xl mt-1"> <%= @animal.name %> </div>
   <div class="mt-1 flex md:justify-center"> <%= image_tag @animal.image_url, size: "400x400" %> </div>
-  <div class="text-center text-xl mt-1"> Adotado: <%= @animal.animal_type %> </div>
-  <div class="text-center text-xl mt-1"> Data de Nascimento: <%= @animal.date_of_birth %> </div>
+  <div class="text-center text-xl mt-1"> Tipo do animal: <%= @animal.type_animal %> </div>
+  <div class="text-center text-xl mt-1"> Data de Nascimento: <%= data_br(@animal.date_of_birth) %> </div>
   <div class="text-center text-xl mt-1"> Adotado: <%= booleanSimNao(@animal.adopted) %> </div>
   <div class="text-center text-xl mt-1"> Descrição curta: <%= @animal.short_description %> </div>
   <div class="text-center text-xl mt-1"> Descrição completa: <%= @animal.full_description %> </div>
-  <div class="text-center text-xl mt-1"> Dono: <%= @adoption.owner_name %> </div>
+  <div class="text-center text-xl mt-1"> Dono: <%= nome_dono(@adoption.owner_name) %> </div>
 
 </div>
 
