--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,4 +1,4 @@
-<div class="block p-2 text-blue-300">
+<div class="block p-2 text-white">
 
   <div class="text-center  text-xl mt-1"> <%= @animal.name %> </div>
   <div class="mt-1 flex md:justify-center"> <%= image_tag @animal.image_url, size: "400x400" %> </div>
