--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -10,9 +10,9 @@
   <% @animals.each do |animal| %>
     <div class="block p-2">
       <div class="text-center text-lg mt-1"> <strong> Nome: </strong> <%= animal.name %> </div>
-      <div class="text-center text-lg mt-1"> <strong>Adotado: </strong> <%= booleanSimNao(animal.adopted) %> </div>
-      <div class="text-center text-lg mt-1"> <strong>Descrição curta: </strong> <%= animal.short_description %> </div>
-      <div class="text-center hover:underline mt-1 font-bold text-lg"> <%= link_to 'Visualizar mais Informações.', animal_path(animal) %> </div>
+      <div class="text-center text-lg mt-1"> <strong> Adotado: </strong> <%= booleanSimNao(animal.adopted) %> </div>
+      <div class="text-center text-lg mt-1"> <strong> Descrição curta: </strong> <%= animal.short_description %> </div>
+      <div class="text-center text-lg mt-1"> <%= link_to 'Visualizar mais Informações', animal_path(animal), class: 'font-bold bg-blue-500 rounded hover:bg-blue-800 px-3' %> </div>
     </div>
   <% end %>
 
