--- a/app/views/animals/edit.html.erb
+++ b/app/views/animals/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Animals#edit</h1>
-<p>Find me in app/views/animals/edit.html.erb</p>
+<div class="p-2 block">
+  <div class="text-white text-lg"> Edição de dados do animal </div>
+  <div class="">
+    <%= form_with model: @animal do |form| %>
+      <div class="mt-2"> <%= form.text_field :name %> </div>
+      <div class="mt-2"> <%= form.text_field :image_url  %> </div>
+      <div class="mt-2"> <%= form.submit "Salvar", class: 'rounded px-3 bg-green-500 hover:bg-green-800' %> </div>
+    <% end %>
+  </div>
+</div>
