--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="p-2 inline-block grid grid-cols-12 grid-span-4 text-white ml-20">
-  <div class="col-span-5 text-right"> Animais adotados: <%= link_to 'Sim', animals_path(filter_adopted: true), :class => 'font-bold bg-red-500 hover:bg-red-800 rounded py-1 px-4' %> </div>
+  <div class="col-span-5 text-right font-bold"> Animais adotados: <%= link_to 'Sim', animals_path(filter_adopted: true), :class => 'font-bold bg-red-500 hover:bg-red-800 rounded py-1 px-4' %> </div>
   <div class="col-span-1 text-center font-bold"> <%= link_to 'Não', animals_path(filter_adopted: false), :class => 'bg-green-500 hover:bg-green-800 rounded py-1 px-4' %> </div>
   <div class="col-span-5 text-left font-bold"> <%= link_to 'Todos', animals_path, :class => 'bg-blue-500 hover:bg-blue-800 rounded py-1 px-4' %> </div>
   <div class="col-span-1 font-bold"> <%= link_to 'Cadastrar animal', new_animal_path, :class => 'bg-blue-500 hover:bg-blue-800 font-bold py-1 px-3 rounded' %> </div>
@@ -12,7 +12,7 @@
       <div class="text-center text-lg mt-1"> <strong> Nome: </strong> <%= animal.name %> </div>
       <div class="text-center text-lg mt-1"> <strong> Adotado: </strong> <%= booleanSimNao(animal.adopted) %> </div>
       <div class="text-center text-lg mt-1"> <strong> Descrição curta: </strong> <%= animal.short_description %> </div>
-      <div class="text-center text-lg mt-1"> <%= link_to 'Visualizar mais Informações', animal_path(animal), class: 'font-bold bg-blue-500 rounded hover:bg-blue-800 px-3' %> </div>
+      <div class="text-center text-lg mt-3"> <%= link_to 'Visualizar mais Informações', animal_path(animal), class: 'font-bold bg-blue-500 rounded hover:bg-blue-800 px-3 py-1' %> </div>
     </div>
   <% end %>
 
