--- a/app/views/animals/new.html.erb
+++ b/app/views/animals/new.html.erb
@@ -1,22 +1,22 @@
-<div class="p-2 text-center text-black">
+<div class="p-2 text-center text-white">
   <h4 class="font-bold mb-6 text-xl">Cadastrar um novo Animal</h3>
   <div class="">
     <%= form_with model: @animal do |form| %>
       <div class="font-bold"> Nome do animal </div>
-      <div class="block"> <%= form.text_field :name, placeholder: "Nome do animal", size: '67', class: 'text-center' %> </div>
-      <div class="mt-1 font-bold"> Tipo do animal </div>
-      <div class="block"> <%= form.text_field :type_animal, placeholder: "Gato/Cachorro/Outro", size: '67', class: 'text-center' %> </div>
-      <div class="mt-1 font-bold"> Dia de nascimento</div>
-      <div class="block"> <%= form.text_field :date_of_birth , placeholder: "16/10/1999", size: '67', class: 'text-center' %> </div>
+      <div class="block mt-2"> <%= form.text_field :name, placeholder: "Nome do animal", size: '67', class: 'text-center text-black' %> </div>
+      <div class="mt-3 font-bold"> Tipo do animal </div>
+      <div class="block mt-2"> <%= form.text_field :type_animal, placeholder: "Gato/Cachorro/Outro", size: '67', class: 'text-center  text-black' %> </div>
+      <div class="mt-3 font-bold"> Dia de nascimento</div>
+      <div class="block mt-2"> <%= form.text_field :date_of_birth , placeholder: "16/10/1999", size: '67', class: 'text-center  text-black' %> </div>
       <!-- <div class="mt-1 font-bold"> Adotado </div> -->
-      <div class="block"> <%= form.hidden_field :adopted , placeholder: "Sim/Não", size: '67', class: 'text-center disabled', value: 'false' %> </div>
-      <div class="mt-1 font-bold"> Pequena descrição do animal </div>
-      <div class="block mt-1"> <%= form.text_area :short_description , placeholder: "Descrição curta referente ao animal", rows: '3', cols: '69', class: 'text-center' %> </div>
-      <div class="mt-1 font-bold"> Descrição completa do animal </div>
-      <div class="block mt-1"> <%= form.text_area :full_description , placeholder: "Descrição completa referente ao animal", rows: '6', cols: '69', class: 'text-center' %> </div>
-      <div class="mt-1 font-bold"> URL da imagem do animal </div>
-      <div class="block mt-1 mb-6"> <%= form.text_field :image_url , placeholder: "URL da Imagem do animal", size: '200' %> </div>
-      <div class="block mt-1"> <%= form.submit "Criar Animal", :class => 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
+      <div class="block"> <%= form.hidden_field :adopted , placeholder: "Sim/Não", size: '67', class: 'text-center text-black', value: 'false' %> </div>
+      <div class="mt-3 font-bold"> Pequena descrição do animal </div>
+      <div class="block mt-2"> <%= form.text_area :short_description , placeholder: "Descrição curta referente ao animal", rows: '3', cols: '69', class: 'text-center  text-black' %> </div>
+      <div class="mt-3 font-bold"> Descrição completa do animal </div>
+      <div class="block mt-2"> <%= form.text_area :full_description , placeholder: "Descrição completa referente ao animal", rows: '6', cols: '69', class: 'text-center  text-black' %> </div>
+      <div class="mt-3 font-bold"> URL da imagem do animal </div>
+      <div class="block mt-2 mb-6"> <%= form.text_field :image_url , placeholder: "URL da Imagem do animal", size: '200', class: 'text-black' %> </div>
+      <div class="block mt-1"> <%= form.submit "Criar Animal", :class => 'bg-blue-500 hover:bg-blue-700 text-black font-bold py-2 px-4 rounded' %>
     <% end %>
   </div>
 </div>
