--- a/app/views/animals/new.html.erb
+++ b/app/views/animals/new.html.erb
@@ -10,7 +10,7 @@
       <div class="block mt-2"> <%= form.text_field :date_of_birth , placeholder: "16/10/1999", size: '67', class: 'text-center  text-black' %> </div>
       <!-- <div class="mt-1 font-bold"> Adotado </div> -->
       <div class="block"> <%= form.hidden_field :adopted , placeholder: "Sim/Não", size: '67', class: 'text-center text-black', value: 'false' %> </div>
-      <div class="mt-3 font-bold"> Pequena descrição do animal </div>
+      <div class="mt-3 font-bold"> Descrição curta do animal </div>
       <div class="block mt-2"> <%= form.text_area :short_description , placeholder: "Descrição curta referente ao animal", rows: '3', cols: '69', class: 'text-center text-black' %> </div>
       <div class="mt-3 font-bold"> Descrição completa do animal </div>
       <div class="block mt-2"> <%= form.text_area :full_description , placeholder: "Descrição completa referente ao animal", rows: '6', cols: '69', class: 'text-center text-black' %> </div>
