--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,6 +1,8 @@
 <div class="block p-2 text-white">
   <div class="text-center  text-xl mt-4 font-bold"> <%= @animal.name %> </div>
-  <div class="mt-4 flex md:justify-center"> <%= image_tag @animal.image_url, size: "450x450" %> </div>
+  <% if @animal.animalimage.attached? %>
+    <div class="mt-4 flex md:justify-center"> <%= image_tag @animal.animalimage, size: "450x450" %> </div>
+  <% end %>
   <div class="text-center text-xl mt-4"> <strong> Tipo do animal: </strong> <%= @animal.type_animal %> </div>
   <div class="text-center text-xl mt-4"> <strong> Data de Nascimento: </strong> <%= data_br(@animal.date_of_birth) %> </div>
   <div class="text-center text-xl mt-4"> <strong> Descrição curta: </strong> <%= @animal.short_description %> </div>
